# autortr

./: CHANGELOG.md  Cargo.toml  README.md  _typos.toml  autortr_rocket.http  publish.cmd  publish.sh  tester.sh
rocket/autortr-rocket/: Cargo.toml  README.md
rocket/autortr-rocket-codegen/: Cargo.toml  README.md
rocket/autortr-rocket-codegen/src/: lib.rs
rocket/autortr-rocket-core/: Cargo.toml  README.md
rocket/autortr-rocket-core/src/: lib.rs
rocket/autortr-rocket-router/: Cargo.toml  README.md
rocket/autortr-rocket-router/src/: lib.rs
rocket/autortr-rocket/src/: lib.rs  prelude.rs
rocket/codegen/: Cargo.toml  README.md
rocket/codegen/src/: lib.rs
rocket/core/: Cargo.toml  README.md
rocket/core/src/: lib.rs
rocket/rocket/: Cargo.toml
rocket/rocket/src/: lib.rs  prelude.rs
rocket/router/: Cargo.toml  README.md
rocket/router/src/: lib.rs
tester/rocket/hello-rocket/: Cargo.toml  README.md
tester/rocket/hello-rocket/src/: controller.rs  lib.rs  main.rs
