[workspace]
resolver = "2"

# autortr == auto autortr-rocket-router

# @formatter:off
members = [
    "rocket/autortr-rocket",
    "rocket/autortr-rocket-codegen",
    "rocket/autortr-rocket-core",
    "rocket/autortr-rocket-router",
    "tester/rocket/hello-rocket",
]
# @formatter:on

[workspace.dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# ------------------------------------------------
rocket = "0.5"
# ------------------------------------------------
lazy_static = "1.5"
ctor = "0.2"
