[workspace]
resolver = "2"

# autortr == auto router

# @formatter:off
members = [
    "rocket/autortr-rocket",
    "rocket/codegen",
    "rocket/core",
    "rocket/router",
    "tester/rocket/hello-rocket",
]
# @formatter:on

[workspace.dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# ------------------------------------------------
rocket = "0.5"
# ------------------------------------------------
lazy_static = "1.5"
ctor = "0.2"
