[package]
name = "autortr_rocket"
version = "0.2.0"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

documentation = "https://docs.rs/autortr_rocket"
repository = "https://github.com/photowey/autortr"
homepage = "https://github.com/photowey/autortr"

description = """
autortr-rocket is a lightweight Rust library designed for the web framework Rocket.
It simplifies the process of defining and managing HTTP routes by automatically
registering functions annotated with custom attributes such as #[request_mapping].
"""

readme = "README.md"
keywords = ["rocket", "web", "router"]
# https://crates.io/category_slugs
categories = ["web-programming"]

[dependencies]
autortr_rocket_codegen = { version = "0.2", path = "../codegen" }
autortr_rocket_core = { version = "0.1", path = "../core" }
autortr_rocket_router = { version = "0.1", path = "../router" }
