[package]
name = "autortr_rocket"
version = "0.2.2"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

documentation = "https://docs.rs/autortr_rocket"
repository = "https://github.com/photowey/autortr"
homepage = "https://github.com/photowey/autortr"

description = """
`autortr_rocket` is a lightweight Rust library designed for automatic route mapping in web applications
for the `Rocket` framework. It simplifies the process of defining and managing `HTTP` routes by automatically
registering functions annotated with custom attributes like `#[request_mapping]`
Or `#[get_mapping]`, `#[post_mapping]`, `#[patch_mapping]`, `#[put_mapping]`,`#[delete_mapping]` and `#[head_mapping]`.
"""

readme = "README.md"
keywords = ["rocket", "web", "router"]
# https://crates.io/category_slugs
categories = ["web-programming"]

[dependencies]
autortr_rocket_codegen = { version = "0.2", path = "../codegen" }
autortr_rocket_core = { version = "0.1", path = "../core" }
autortr_rocket_router = { version = "0.1", path = "../router" }
