[package]
name = "autortr_rocket_codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# ------------------------------------------------
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
# ------------------------------------------------
rocket = { workspace = true }
ctor = { workspace = true }
# ------------------------------------------------
autortr_rocket_core = { path = "../core" }

[lib]
proc-macro = true
