[package]
name = "hello_rocket"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

publish = false

[dependencies]
# ------------------------------------------------
rocket = { workspace = true }
ctor = { workspace = true }
# ------------------------------------------------
autortr_rocket = { version = "0.2", path = "../../../rocket/autortr-rocket" }
